parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statement
Rule 1     statement -> ID ASSIGN expression SEMICOLON
Rule 2     statement -> IF LPAREN expression RPAREN SCOPE statements SCOPE
Rule 3     statements -> statement
Rule 4     statements -> statements statement
Rule 5     expression -> expression PLUS expression
Rule 6     expression -> expression MINUS expression
Rule 7     expression -> expression TIMES expression
Rule 8     expression -> expression DIVIDE expression
Rule 9     expression -> expression EQ expression
Rule 10    expression -> expression NEQ expression
Rule 11    expression -> expression LE expression
Rule 12    expression -> expression GE expression
Rule 13    expression -> expression LT expression
Rule 14    expression -> expression GT expression
Rule 15    expression -> expression AND expression
Rule 16    expression -> expression OR expression
Rule 17    expression -> MINUS expression
Rule 18    expression -> LPAREN expression RPAREN
Rule 19    expression -> ID
Rule 20    expression -> INT
Rule 21    expression -> BOOL

Terminals, with rules where they appear

AND                  : 15
ASSIGN               : 1
BOOL                 : 21
DIVIDE               : 8
EQ                   : 9
GE                   : 12
GT                   : 14
ID                   : 1 19
IF                   : 2
INT                  : 20
LE                   : 11
LPAREN               : 2 18
LT                   : 13
MINUS                : 6 17
NEQ                  : 10
OR                   : 16
PLUS                 : 5
RPAREN               : 2 18
SCOPE                : 2 2
SEMICOLON            : 1
TIMES                : 7
error                : 

Nonterminals, with rules where they appear

expression           : 1 2 5 5 6 6 7 7 8 8 9 9 10 10 11 11 12 12 13 13 14 14 15 15 16 16 17 18
statement            : 3 4 0
statements           : 2 4

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . ID ASSIGN expression SEMICOLON
    (2) statement -> . IF LPAREN expression RPAREN SCOPE statements SCOPE

    ID              shift and go to state 2
    IF              shift and go to state 3

    statement                      shift and go to state 1

state 1

    (0) S' -> statement .



state 2

    (1) statement -> ID . ASSIGN expression SEMICOLON

    ASSIGN          shift and go to state 4


state 3

    (2) statement -> IF . LPAREN expression RPAREN SCOPE statements SCOPE

    LPAREN          shift and go to state 5


state 4

    (1) statement -> ID ASSIGN . expression SEMICOLON
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression EQ expression
    (10) expression -> . expression NEQ expression
    (11) expression -> . expression LE expression
    (12) expression -> . expression GE expression
    (13) expression -> . expression LT expression
    (14) expression -> . expression GT expression
    (15) expression -> . expression AND expression
    (16) expression -> . expression OR expression
    (17) expression -> . MINUS expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . ID
    (20) expression -> . INT
    (21) expression -> . BOOL

    MINUS           shift and go to state 8
    LPAREN          shift and go to state 9
    ID              shift and go to state 6
    INT             shift and go to state 10
    BOOL            shift and go to state 11

    expression                     shift and go to state 7

state 5

    (2) statement -> IF LPAREN . expression RPAREN SCOPE statements SCOPE
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression EQ expression
    (10) expression -> . expression NEQ expression
    (11) expression -> . expression LE expression
    (12) expression -> . expression GE expression
    (13) expression -> . expression LT expression
    (14) expression -> . expression GT expression
    (15) expression -> . expression AND expression
    (16) expression -> . expression OR expression
    (17) expression -> . MINUS expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . ID
    (20) expression -> . INT
    (21) expression -> . BOOL

    MINUS           shift and go to state 8
    LPAREN          shift and go to state 9
    ID              shift and go to state 6
    INT             shift and go to state 10
    BOOL            shift and go to state 11

    expression                     shift and go to state 12

state 6

    (19) expression -> ID .

    SEMICOLON       reduce using rule 19 (expression -> ID .)
    PLUS            reduce using rule 19 (expression -> ID .)
    MINUS           reduce using rule 19 (expression -> ID .)
    TIMES           reduce using rule 19 (expression -> ID .)
    DIVIDE          reduce using rule 19 (expression -> ID .)
    EQ              reduce using rule 19 (expression -> ID .)
    NEQ             reduce using rule 19 (expression -> ID .)
    LE              reduce using rule 19 (expression -> ID .)
    GE              reduce using rule 19 (expression -> ID .)
    LT              reduce using rule 19 (expression -> ID .)
    GT              reduce using rule 19 (expression -> ID .)
    AND             reduce using rule 19 (expression -> ID .)
    OR              reduce using rule 19 (expression -> ID .)
    RPAREN          reduce using rule 19 (expression -> ID .)


state 7

    (1) statement -> ID ASSIGN expression . SEMICOLON
    (5) expression -> expression . PLUS expression
    (6) expression -> expression . MINUS expression
    (7) expression -> expression . TIMES expression
    (8) expression -> expression . DIVIDE expression
    (9) expression -> expression . EQ expression
    (10) expression -> expression . NEQ expression
    (11) expression -> expression . LE expression
    (12) expression -> expression . GE expression
    (13) expression -> expression . LT expression
    (14) expression -> expression . GT expression
    (15) expression -> expression . AND expression
    (16) expression -> expression . OR expression

    SEMICOLON       shift and go to state 13
    PLUS            shift and go to state 14
    MINUS           shift and go to state 15
    TIMES           shift and go to state 16
    DIVIDE          shift and go to state 17
    EQ              shift and go to state 18
    NEQ             shift and go to state 19
    LE              shift and go to state 20
    GE              shift and go to state 21
    LT              shift and go to state 22
    GT              shift and go to state 23
    AND             shift and go to state 24
    OR              shift and go to state 25


state 8

    (17) expression -> MINUS . expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression EQ expression
    (10) expression -> . expression NEQ expression
    (11) expression -> . expression LE expression
    (12) expression -> . expression GE expression
    (13) expression -> . expression LT expression
    (14) expression -> . expression GT expression
    (15) expression -> . expression AND expression
    (16) expression -> . expression OR expression
    (17) expression -> . MINUS expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . ID
    (20) expression -> . INT
    (21) expression -> . BOOL

    MINUS           shift and go to state 8
    LPAREN          shift and go to state 9
    ID              shift and go to state 6
    INT             shift and go to state 10
    BOOL            shift and go to state 11

    expression                     shift and go to state 26

state 9

    (18) expression -> LPAREN . expression RPAREN
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression EQ expression
    (10) expression -> . expression NEQ expression
    (11) expression -> . expression LE expression
    (12) expression -> . expression GE expression
    (13) expression -> . expression LT expression
    (14) expression -> . expression GT expression
    (15) expression -> . expression AND expression
    (16) expression -> . expression OR expression
    (17) expression -> . MINUS expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . ID
    (20) expression -> . INT
    (21) expression -> . BOOL

    MINUS           shift and go to state 8
    LPAREN          shift and go to state 9
    ID              shift and go to state 6
    INT             shift and go to state 10
    BOOL            shift and go to state 11

    expression                     shift and go to state 27

state 10

    (20) expression -> INT .

    SEMICOLON       reduce using rule 20 (expression -> INT .)
    PLUS            reduce using rule 20 (expression -> INT .)
    MINUS           reduce using rule 20 (expression -> INT .)
    TIMES           reduce using rule 20 (expression -> INT .)
    DIVIDE          reduce using rule 20 (expression -> INT .)
    EQ              reduce using rule 20 (expression -> INT .)
    NEQ             reduce using rule 20 (expression -> INT .)
    LE              reduce using rule 20 (expression -> INT .)
    GE              reduce using rule 20 (expression -> INT .)
    LT              reduce using rule 20 (expression -> INT .)
    GT              reduce using rule 20 (expression -> INT .)
    AND             reduce using rule 20 (expression -> INT .)
    OR              reduce using rule 20 (expression -> INT .)
    RPAREN          reduce using rule 20 (expression -> INT .)


state 11

    (21) expression -> BOOL .

    SEMICOLON       reduce using rule 21 (expression -> BOOL .)
    PLUS            reduce using rule 21 (expression -> BOOL .)
    MINUS           reduce using rule 21 (expression -> BOOL .)
    TIMES           reduce using rule 21 (expression -> BOOL .)
    DIVIDE          reduce using rule 21 (expression -> BOOL .)
    EQ              reduce using rule 21 (expression -> BOOL .)
    NEQ             reduce using rule 21 (expression -> BOOL .)
    LE              reduce using rule 21 (expression -> BOOL .)
    GE              reduce using rule 21 (expression -> BOOL .)
    LT              reduce using rule 21 (expression -> BOOL .)
    GT              reduce using rule 21 (expression -> BOOL .)
    AND             reduce using rule 21 (expression -> BOOL .)
    OR              reduce using rule 21 (expression -> BOOL .)
    RPAREN          reduce using rule 21 (expression -> BOOL .)


state 12

    (2) statement -> IF LPAREN expression . RPAREN SCOPE statements SCOPE
    (5) expression -> expression . PLUS expression
    (6) expression -> expression . MINUS expression
    (7) expression -> expression . TIMES expression
    (8) expression -> expression . DIVIDE expression
    (9) expression -> expression . EQ expression
    (10) expression -> expression . NEQ expression
    (11) expression -> expression . LE expression
    (12) expression -> expression . GE expression
    (13) expression -> expression . LT expression
    (14) expression -> expression . GT expression
    (15) expression -> expression . AND expression
    (16) expression -> expression . OR expression

    RPAREN          shift and go to state 28
    PLUS            shift and go to state 14
    MINUS           shift and go to state 15
    TIMES           shift and go to state 16
    DIVIDE          shift and go to state 17
    EQ              shift and go to state 18
    NEQ             shift and go to state 19
    LE              shift and go to state 20
    GE              shift and go to state 21
    LT              shift and go to state 22
    GT              shift and go to state 23
    AND             shift and go to state 24
    OR              shift and go to state 25


state 13

    (1) statement -> ID ASSIGN expression SEMICOLON .

    $end            reduce using rule 1 (statement -> ID ASSIGN expression SEMICOLON .)
    SCOPE           reduce using rule 1 (statement -> ID ASSIGN expression SEMICOLON .)
    ID              reduce using rule 1 (statement -> ID ASSIGN expression SEMICOLON .)
    IF              reduce using rule 1 (statement -> ID ASSIGN expression SEMICOLON .)


state 14

    (5) expression -> expression PLUS . expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression EQ expression
    (10) expression -> . expression NEQ expression
    (11) expression -> . expression LE expression
    (12) expression -> . expression GE expression
    (13) expression -> . expression LT expression
    (14) expression -> . expression GT expression
    (15) expression -> . expression AND expression
    (16) expression -> . expression OR expression
    (17) expression -> . MINUS expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . ID
    (20) expression -> . INT
    (21) expression -> . BOOL

    MINUS           shift and go to state 8
    LPAREN          shift and go to state 9
    ID              shift and go to state 6
    INT             shift and go to state 10
    BOOL            shift and go to state 11

    expression                     shift and go to state 29

state 15

    (6) expression -> expression MINUS . expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression EQ expression
    (10) expression -> . expression NEQ expression
    (11) expression -> . expression LE expression
    (12) expression -> . expression GE expression
    (13) expression -> . expression LT expression
    (14) expression -> . expression GT expression
    (15) expression -> . expression AND expression
    (16) expression -> . expression OR expression
    (17) expression -> . MINUS expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . ID
    (20) expression -> . INT
    (21) expression -> . BOOL

    MINUS           shift and go to state 8
    LPAREN          shift and go to state 9
    ID              shift and go to state 6
    INT             shift and go to state 10
    BOOL            shift and go to state 11

    expression                     shift and go to state 30

state 16

    (7) expression -> expression TIMES . expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression EQ expression
    (10) expression -> . expression NEQ expression
    (11) expression -> . expression LE expression
    (12) expression -> . expression GE expression
    (13) expression -> . expression LT expression
    (14) expression -> . expression GT expression
    (15) expression -> . expression AND expression
    (16) expression -> . expression OR expression
    (17) expression -> . MINUS expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . ID
    (20) expression -> . INT
    (21) expression -> . BOOL

    MINUS           shift and go to state 8
    LPAREN          shift and go to state 9
    ID              shift and go to state 6
    INT             shift and go to state 10
    BOOL            shift and go to state 11

    expression                     shift and go to state 31

state 17

    (8) expression -> expression DIVIDE . expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression EQ expression
    (10) expression -> . expression NEQ expression
    (11) expression -> . expression LE expression
    (12) expression -> . expression GE expression
    (13) expression -> . expression LT expression
    (14) expression -> . expression GT expression
    (15) expression -> . expression AND expression
    (16) expression -> . expression OR expression
    (17) expression -> . MINUS expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . ID
    (20) expression -> . INT
    (21) expression -> . BOOL

    MINUS           shift and go to state 8
    LPAREN          shift and go to state 9
    ID              shift and go to state 6
    INT             shift and go to state 10
    BOOL            shift and go to state 11

    expression                     shift and go to state 32

state 18

    (9) expression -> expression EQ . expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression EQ expression
    (10) expression -> . expression NEQ expression
    (11) expression -> . expression LE expression
    (12) expression -> . expression GE expression
    (13) expression -> . expression LT expression
    (14) expression -> . expression GT expression
    (15) expression -> . expression AND expression
    (16) expression -> . expression OR expression
    (17) expression -> . MINUS expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . ID
    (20) expression -> . INT
    (21) expression -> . BOOL

    MINUS           shift and go to state 8
    LPAREN          shift and go to state 9
    ID              shift and go to state 6
    INT             shift and go to state 10
    BOOL            shift and go to state 11

    expression                     shift and go to state 33

state 19

    (10) expression -> expression NEQ . expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression EQ expression
    (10) expression -> . expression NEQ expression
    (11) expression -> . expression LE expression
    (12) expression -> . expression GE expression
    (13) expression -> . expression LT expression
    (14) expression -> . expression GT expression
    (15) expression -> . expression AND expression
    (16) expression -> . expression OR expression
    (17) expression -> . MINUS expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . ID
    (20) expression -> . INT
    (21) expression -> . BOOL

    MINUS           shift and go to state 8
    LPAREN          shift and go to state 9
    ID              shift and go to state 6
    INT             shift and go to state 10
    BOOL            shift and go to state 11

    expression                     shift and go to state 34

state 20

    (11) expression -> expression LE . expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression EQ expression
    (10) expression -> . expression NEQ expression
    (11) expression -> . expression LE expression
    (12) expression -> . expression GE expression
    (13) expression -> . expression LT expression
    (14) expression -> . expression GT expression
    (15) expression -> . expression AND expression
    (16) expression -> . expression OR expression
    (17) expression -> . MINUS expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . ID
    (20) expression -> . INT
    (21) expression -> . BOOL

    MINUS           shift and go to state 8
    LPAREN          shift and go to state 9
    ID              shift and go to state 6
    INT             shift and go to state 10
    BOOL            shift and go to state 11

    expression                     shift and go to state 35

state 21

    (12) expression -> expression GE . expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression EQ expression
    (10) expression -> . expression NEQ expression
    (11) expression -> . expression LE expression
    (12) expression -> . expression GE expression
    (13) expression -> . expression LT expression
    (14) expression -> . expression GT expression
    (15) expression -> . expression AND expression
    (16) expression -> . expression OR expression
    (17) expression -> . MINUS expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . ID
    (20) expression -> . INT
    (21) expression -> . BOOL

    MINUS           shift and go to state 8
    LPAREN          shift and go to state 9
    ID              shift and go to state 6
    INT             shift and go to state 10
    BOOL            shift and go to state 11

    expression                     shift and go to state 36

state 22

    (13) expression -> expression LT . expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression EQ expression
    (10) expression -> . expression NEQ expression
    (11) expression -> . expression LE expression
    (12) expression -> . expression GE expression
    (13) expression -> . expression LT expression
    (14) expression -> . expression GT expression
    (15) expression -> . expression AND expression
    (16) expression -> . expression OR expression
    (17) expression -> . MINUS expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . ID
    (20) expression -> . INT
    (21) expression -> . BOOL

    MINUS           shift and go to state 8
    LPAREN          shift and go to state 9
    ID              shift and go to state 6
    INT             shift and go to state 10
    BOOL            shift and go to state 11

    expression                     shift and go to state 37

state 23

    (14) expression -> expression GT . expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression EQ expression
    (10) expression -> . expression NEQ expression
    (11) expression -> . expression LE expression
    (12) expression -> . expression GE expression
    (13) expression -> . expression LT expression
    (14) expression -> . expression GT expression
    (15) expression -> . expression AND expression
    (16) expression -> . expression OR expression
    (17) expression -> . MINUS expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . ID
    (20) expression -> . INT
    (21) expression -> . BOOL

    MINUS           shift and go to state 8
    LPAREN          shift and go to state 9
    ID              shift and go to state 6
    INT             shift and go to state 10
    BOOL            shift and go to state 11

    expression                     shift and go to state 38

state 24

    (15) expression -> expression AND . expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression EQ expression
    (10) expression -> . expression NEQ expression
    (11) expression -> . expression LE expression
    (12) expression -> . expression GE expression
    (13) expression -> . expression LT expression
    (14) expression -> . expression GT expression
    (15) expression -> . expression AND expression
    (16) expression -> . expression OR expression
    (17) expression -> . MINUS expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . ID
    (20) expression -> . INT
    (21) expression -> . BOOL

    MINUS           shift and go to state 8
    LPAREN          shift and go to state 9
    ID              shift and go to state 6
    INT             shift and go to state 10
    BOOL            shift and go to state 11

    expression                     shift and go to state 39

state 25

    (16) expression -> expression OR . expression
    (5) expression -> . expression PLUS expression
    (6) expression -> . expression MINUS expression
    (7) expression -> . expression TIMES expression
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression EQ expression
    (10) expression -> . expression NEQ expression
    (11) expression -> . expression LE expression
    (12) expression -> . expression GE expression
    (13) expression -> . expression LT expression
    (14) expression -> . expression GT expression
    (15) expression -> . expression AND expression
    (16) expression -> . expression OR expression
    (17) expression -> . MINUS expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . ID
    (20) expression -> . INT
    (21) expression -> . BOOL

    MINUS           shift and go to state 8
    LPAREN          shift and go to state 9
    ID              shift and go to state 6
    INT             shift and go to state 10
    BOOL            shift and go to state 11

    expression                     shift and go to state 40

state 26

    (17) expression -> MINUS expression .
    (5) expression -> expression . PLUS expression
    (6) expression -> expression . MINUS expression
    (7) expression -> expression . TIMES expression
    (8) expression -> expression . DIVIDE expression
    (9) expression -> expression . EQ expression
    (10) expression -> expression . NEQ expression
    (11) expression -> expression . LE expression
    (12) expression -> expression . GE expression
    (13) expression -> expression . LT expression
    (14) expression -> expression . GT expression
    (15) expression -> expression . AND expression
    (16) expression -> expression . OR expression

    SEMICOLON       reduce using rule 17 (expression -> MINUS expression .)
    PLUS            reduce using rule 17 (expression -> MINUS expression .)
    MINUS           reduce using rule 17 (expression -> MINUS expression .)
    EQ              reduce using rule 17 (expression -> MINUS expression .)
    NEQ             reduce using rule 17 (expression -> MINUS expression .)
    LE              reduce using rule 17 (expression -> MINUS expression .)
    GE              reduce using rule 17 (expression -> MINUS expression .)
    LT              reduce using rule 17 (expression -> MINUS expression .)
    GT              reduce using rule 17 (expression -> MINUS expression .)
    AND             reduce using rule 17 (expression -> MINUS expression .)
    OR              reduce using rule 17 (expression -> MINUS expression .)
    RPAREN          reduce using rule 17 (expression -> MINUS expression .)
    TIMES           shift and go to state 16
    DIVIDE          shift and go to state 17

  ! TIMES           [ reduce using rule 17 (expression -> MINUS expression .) ]
  ! DIVIDE          [ reduce using rule 17 (expression -> MINUS expression .) ]
  ! PLUS            [ shift and go to state 14 ]
  ! MINUS           [ shift and go to state 15 ]
  ! EQ              [ shift and go to state 18 ]
  ! NEQ             [ shift and go to state 19 ]
  ! LE              [ shift and go to state 20 ]
  ! GE              [ shift and go to state 21 ]
  ! LT              [ shift and go to state 22 ]
  ! GT              [ shift and go to state 23 ]
  ! AND             [ shift and go to state 24 ]
  ! OR              [ shift and go to state 25 ]


state 27

    (18) expression -> LPAREN expression . RPAREN
    (5) expression -> expression . PLUS expression
    (6) expression -> expression . MINUS expression
    (7) expression -> expression . TIMES expression
    (8) expression -> expression . DIVIDE expression
    (9) expression -> expression . EQ expression
    (10) expression -> expression . NEQ expression
    (11) expression -> expression . LE expression
    (12) expression -> expression . GE expression
    (13) expression -> expression . LT expression
    (14) expression -> expression . GT expression
    (15) expression -> expression . AND expression
    (16) expression -> expression . OR expression

    RPAREN          shift and go to state 41
    PLUS            shift and go to state 14
    MINUS           shift and go to state 15
    TIMES           shift and go to state 16
    DIVIDE          shift and go to state 17
    EQ              shift and go to state 18
    NEQ             shift and go to state 19
    LE              shift and go to state 20
    GE              shift and go to state 21
    LT              shift and go to state 22
    GT              shift and go to state 23
    AND             shift and go to state 24
    OR              shift and go to state 25


state 28

    (2) statement -> IF LPAREN expression RPAREN . SCOPE statements SCOPE

    SCOPE           shift and go to state 42


state 29

    (5) expression -> expression PLUS expression .
    (5) expression -> expression . PLUS expression
    (6) expression -> expression . MINUS expression
    (7) expression -> expression . TIMES expression
    (8) expression -> expression . DIVIDE expression
    (9) expression -> expression . EQ expression
    (10) expression -> expression . NEQ expression
    (11) expression -> expression . LE expression
    (12) expression -> expression . GE expression
    (13) expression -> expression . LT expression
    (14) expression -> expression . GT expression
    (15) expression -> expression . AND expression
    (16) expression -> expression . OR expression

    SEMICOLON       reduce using rule 5 (expression -> expression PLUS expression .)
    PLUS            reduce using rule 5 (expression -> expression PLUS expression .)
    MINUS           reduce using rule 5 (expression -> expression PLUS expression .)
    EQ              reduce using rule 5 (expression -> expression PLUS expression .)
    NEQ             reduce using rule 5 (expression -> expression PLUS expression .)
    LE              reduce using rule 5 (expression -> expression PLUS expression .)
    GE              reduce using rule 5 (expression -> expression PLUS expression .)
    LT              reduce using rule 5 (expression -> expression PLUS expression .)
    GT              reduce using rule 5 (expression -> expression PLUS expression .)
    AND             reduce using rule 5 (expression -> expression PLUS expression .)
    OR              reduce using rule 5 (expression -> expression PLUS expression .)
    RPAREN          reduce using rule 5 (expression -> expression PLUS expression .)
    TIMES           shift and go to state 16
    DIVIDE          shift and go to state 17

  ! TIMES           [ reduce using rule 5 (expression -> expression PLUS expression .) ]
  ! DIVIDE          [ reduce using rule 5 (expression -> expression PLUS expression .) ]
  ! PLUS            [ shift and go to state 14 ]
  ! MINUS           [ shift and go to state 15 ]
  ! EQ              [ shift and go to state 18 ]
  ! NEQ             [ shift and go to state 19 ]
  ! LE              [ shift and go to state 20 ]
  ! GE              [ shift and go to state 21 ]
  ! LT              [ shift and go to state 22 ]
  ! GT              [ shift and go to state 23 ]
  ! AND             [ shift and go to state 24 ]
  ! OR              [ shift and go to state 25 ]


state 30

    (6) expression -> expression MINUS expression .
    (5) expression -> expression . PLUS expression
    (6) expression -> expression . MINUS expression
    (7) expression -> expression . TIMES expression
    (8) expression -> expression . DIVIDE expression
    (9) expression -> expression . EQ expression
    (10) expression -> expression . NEQ expression
    (11) expression -> expression . LE expression
    (12) expression -> expression . GE expression
    (13) expression -> expression . LT expression
    (14) expression -> expression . GT expression
    (15) expression -> expression . AND expression
    (16) expression -> expression . OR expression

    SEMICOLON       reduce using rule 6 (expression -> expression MINUS expression .)
    PLUS            reduce using rule 6 (expression -> expression MINUS expression .)
    MINUS           reduce using rule 6 (expression -> expression MINUS expression .)
    EQ              reduce using rule 6 (expression -> expression MINUS expression .)
    NEQ             reduce using rule 6 (expression -> expression MINUS expression .)
    LE              reduce using rule 6 (expression -> expression MINUS expression .)
    GE              reduce using rule 6 (expression -> expression MINUS expression .)
    LT              reduce using rule 6 (expression -> expression MINUS expression .)
    GT              reduce using rule 6 (expression -> expression MINUS expression .)
    AND             reduce using rule 6 (expression -> expression MINUS expression .)
    OR              reduce using rule 6 (expression -> expression MINUS expression .)
    RPAREN          reduce using rule 6 (expression -> expression MINUS expression .)
    TIMES           shift and go to state 16
    DIVIDE          shift and go to state 17

  ! TIMES           [ reduce using rule 6 (expression -> expression MINUS expression .) ]
  ! DIVIDE          [ reduce using rule 6 (expression -> expression MINUS expression .) ]
  ! PLUS            [ shift and go to state 14 ]
  ! MINUS           [ shift and go to state 15 ]
  ! EQ              [ shift and go to state 18 ]
  ! NEQ             [ shift and go to state 19 ]
  ! LE              [ shift and go to state 20 ]
  ! GE              [ shift and go to state 21 ]
  ! LT              [ shift and go to state 22 ]
  ! GT              [ shift and go to state 23 ]
  ! AND             [ shift and go to state 24 ]
  ! OR              [ shift and go to state 25 ]


state 31

    (7) expression -> expression TIMES expression .
    (5) expression -> expression . PLUS expression
    (6) expression -> expression . MINUS expression
    (7) expression -> expression . TIMES expression
    (8) expression -> expression . DIVIDE expression
    (9) expression -> expression . EQ expression
    (10) expression -> expression . NEQ expression
    (11) expression -> expression . LE expression
    (12) expression -> expression . GE expression
    (13) expression -> expression . LT expression
    (14) expression -> expression . GT expression
    (15) expression -> expression . AND expression
    (16) expression -> expression . OR expression

    SEMICOLON       reduce using rule 7 (expression -> expression TIMES expression .)
    PLUS            reduce using rule 7 (expression -> expression TIMES expression .)
    MINUS           reduce using rule 7 (expression -> expression TIMES expression .)
    TIMES           reduce using rule 7 (expression -> expression TIMES expression .)
    DIVIDE          reduce using rule 7 (expression -> expression TIMES expression .)
    EQ              reduce using rule 7 (expression -> expression TIMES expression .)
    NEQ             reduce using rule 7 (expression -> expression TIMES expression .)
    LE              reduce using rule 7 (expression -> expression TIMES expression .)
    GE              reduce using rule 7 (expression -> expression TIMES expression .)
    LT              reduce using rule 7 (expression -> expression TIMES expression .)
    GT              reduce using rule 7 (expression -> expression TIMES expression .)
    AND             reduce using rule 7 (expression -> expression TIMES expression .)
    OR              reduce using rule 7 (expression -> expression TIMES expression .)
    RPAREN          reduce using rule 7 (expression -> expression TIMES expression .)

  ! PLUS            [ shift and go to state 14 ]
  ! MINUS           [ shift and go to state 15 ]
  ! TIMES           [ shift and go to state 16 ]
  ! DIVIDE          [ shift and go to state 17 ]
  ! EQ              [ shift and go to state 18 ]
  ! NEQ             [ shift and go to state 19 ]
  ! LE              [ shift and go to state 20 ]
  ! GE              [ shift and go to state 21 ]
  ! LT              [ shift and go to state 22 ]
  ! GT              [ shift and go to state 23 ]
  ! AND             [ shift and go to state 24 ]
  ! OR              [ shift and go to state 25 ]


state 32

    (8) expression -> expression DIVIDE expression .
    (5) expression -> expression . PLUS expression
    (6) expression -> expression . MINUS expression
    (7) expression -> expression . TIMES expression
    (8) expression -> expression . DIVIDE expression
    (9) expression -> expression . EQ expression
    (10) expression -> expression . NEQ expression
    (11) expression -> expression . LE expression
    (12) expression -> expression . GE expression
    (13) expression -> expression . LT expression
    (14) expression -> expression . GT expression
    (15) expression -> expression . AND expression
    (16) expression -> expression . OR expression
